2005-02-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (decorateType): fixed bug 1124787

2004-02-20 Hubert Sack <sack AT digiplan.de>
	committed by Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: added peepholes 3.h-k and 132.a-f from
	patch #1121755

2004-02-20 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/SDCCpeeph.def: new keyword "labelRefCountChange" which allows peepholes
	to keep the correct label reference count when adding/removing references
	to labels. A peephole file using this is appended to patch #1144962.

2005-02-14 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libc/string/memccpy.c: changed 3rd argument to char
	* src/SDCC.lex (process_pragma): fixed to make disable_warning work for PIC16
	* src/pic16/gen.c (aopForSym, calls to pic16_aopOp): prevent unneccessary
	  retrievals of result operand's value on assignment

2005-02-13 Vangelis Rokas <vrokas AT otenet.gr>

	* device/include/pic16/string.h: modified prototype for memccpy()
	to memccpy(void *, void *, char, size_t)
	* src/pic16/gen.c (genFunction, genEndFunction): reenable if-case to
	check whether to omit frame pointer or not,
	* (genInline): convert all occurences of "\n" to LF in inline
	assembler blocks, this helps formatting the inline text,
	* (pic16_loadFSR0): modified prototype,
	* (genNearPointerGet, genNearPointerSet): reorganization of code,
	removed some 8051 legacy code,
	* (genPackBits): enabled handling bitfields exceeding one byte in size,
	* src/pic16/ralloc.c (pic16_assignRegisters): clear dynrIdx variable
	before allocating temporary registers in functions,

2005-02-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bitvars.c: corrected the "fix"

2005-02-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bitvars.c,
	* support/regression/tests/bitwise.c,
	* support/regression/tests/rotate.c: "fixed" problems on Alpha
